--- a/config/config.yml
+++ b/config/config.yml
@@ -1,4 +1,6 @@
 jira_host: govdelivery.atlassian.net
 jira_port: 443
 use_ssl: true
-jira_path: '/rest/api/2/search?jql=project=PM+and+type=Epic+and+resolution=unresolved+and+component=roadmap&fields=id,key,summary,customfield_11950,customfield_11951,customfield_11850,description,customfield_12151,customfield_10003,priority&expand=renderedFields'
+jira_queries:
+  pm: '/rest/api/2/search?jql=project=PM+and+type=Epic+and+resolution=unresolved+and+component=roadmap&fields=id,key,summary,customfield_11950,customfield_11951,customfield_11850,description,customfield_12151,customfield_10003,priority&expand=renderedFields'
+  plan: '/rest/api/2/search?jql=project=plan+and+type=epic+and+"Roadmap+Start"+is+not+empty+and+"Roadmap+End"+is+not+empty&fields=id,key,summary,customfield_11950,customfield_11951,customfield_11850,description,customfield_12151,customfield_10003,priority&expand=renderedFields'
